--- a/notebook/config.yaml
+++ b/notebook/config.yaml
@@ -3,7 +3,7 @@ fuente:
   host: localhost
   port: 5432
   user: postgres
-  password: 
+  password: 123Randy
   db: rapidos_y_furiosos
 
 bodega:
@@ -11,5 +11,5 @@ bodega:
   host: localhost
   port: 5432
   user: postgres
-  password: 
+  password: 123Randy
   db: rapidos_y_furiosos_bodega
